better default settings

--- a/werewolf.ini
+++ b/werewolf.ini
@@ -9,7 +9,7 @@ botname = Kalbot
 network = irc.utonet.org
 
 //The channel where the game will be played
-channel = #werewolf2
+channel = #werewolf
 
 //The name of the nick service for the network (NickServ, X, X@whatever, etc)
 nickservice = services@services.utonet.org
@@ -24,9 +24,9 @@ debug = off
 delay = 500
 
 //Game configuration values
-jointime = 20
-daytime = 20
-nighttime = 20
-votetime = 20
+jointime = 90
+daytime = 90
+nighttime = 60
+votetime = 30
 tie = on
 idlebarks = off
